# itpolygon-finance-application

./: manage.py  pyproject.toml
.github/workflows/: lint.yaml
core/config/: settings.py  wsgi.py
