[tool.poetry]
name = "IT Polygon Finance Application"
version = "0.1.0"
description = ""
authors = ["kirshuvl <kirshuvl@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
